# cargo-optimize

./: .cargo-optimize.toml  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.config/: nextest.toml
.github/: cliff.toml
.github/workflows/: benchmark.yml  ci.yml  dependency-update.yml  docs.yml  pr-validation.yml  release.yml  test-comprehensive.yml  tests.yml
doc/: CONTEXT_BOUNDARIES.md  Cargo-Optimize-Design.md  Comprehensive-Test-Strategy.md  Comprehensive-Testing-Framework.md  Customization-Guide.md  Error-Resolution-Strategy.md  Future-Features.md  Git-Best-Practices.md  MVP--Just-the-Linker.md  Nextest-Required-on-Windows.md  OPTIMIZATION_GUIDE.md  Prioritization-of-Future-Features.md  Project-Plan.md  README_MVP.md  Test-Reporting-Solutions.md  Testing-Guide.md  Unnecessary-Execute-Bits.md  Using-cargo-nextest.md  instructions.v8.md.removed
examples/: analyze.rs  detect.rs  hardware_info.rs  quick_start.rs
issue/mvp/002/: debug_detection.rs
issue/mvp/002/golden_masters/: cache_selection_0.json  cache_selection_1.json  cache_selection_2.json  complexity_case_0.json  config_format.toml  error_invalid_project.json  error_unsupported_platform.json  linker_selection_macos.json  optimization_features.json  profiles_Large_ci.json  profiles_Large_local.json  profiles_Medium_ci.json  recommendations_many_dependencies.json
issue/mvp/002/old_examples/: basic.rs
scripts/: README.md  apply-architecture-fix.sh  apply-cleanup.sh  cargo-summary.sh  cargo-test-summary.sh  dev-setup.rs  fix-permissions.sh  mvp_demo.sh  remove-execute-permissions.sh  setup.bat  setup.sh  setup_nextest.sh  test-with-summary.sh
scripts/automation/: bump_version.sh  collect_metrics.sh  generate_docs.sh  validate_infrastructure.sh
src/: analysis.rs  analyzer.rs  cache.rs  config.rs  config_fixed.rs  detector.rs  hardware.rs  lib.rs  loop_detector.rs  mvp.rs  optimizer.rs  utils.rs
src/old_modules/: cache.rs  detector.rs  error.rs  linker.rs  profile.rs  utils.rs
tests/: basic_functionality_test.rs  common.rs  comprehensive_test_runner.rs  config_integration.rs  config_management.rs  config_safety_comprehensive.rs  config_safety_comprehensive.rs.old  debug_config_test.rs  debug_directory_structure.rs  debug_figment_loading.rs  figment_debug_test.rs  hardware_detection.rs  integration_test.rs  mvp_test.rs  phase2_test_runner.rs  phase3_security.rs  phase4_production_runner.rs  phase_1_1_validation.rs  production_readiness_tests.rs  project_analysis.rs  quality_assurance_tests.rs  run_comprehensive_tests.bat  run_comprehensive_tests.sh  security_resilience_tests.rs  smoke_test.rs  test_helpers.rs.disabled  test_main.rs  test_main.rs.disabled
tests/comprehensive/: README.md  boundary_tests.rs  boundary_tests.rs.bkp  ci_cd_tests.rs  ci_cd_tests.rs.bkp  fuzz_tests.rs  golden_master_tests.rs  golden_master_tests.rs.bkp  integration_tests.rs  integration_tests_comprehensive.rs  mod.rs  performance_tests.rs  property_based_tests.proptest-regressions  property_based_tests.rs  regression_tests.rs  stress_tests.rs  stress_tests.rs.bkp  test_runner_comprehensive.rs  test_utils.rs  unit_tests_analyzer.rs  unit_tests_config.rs  unit_tests_detector.rs  unit_tests_optimizer.rs
tests/comprehensive/utils/: baseline_measurement.rs
tests/golden_masters/: cli_output_format.json  complexity_case_1.json  default_config.json  error_config_error.json  linker_selection_linux.json  linker_selection_windows.json  profiles_Medium_local.json  profiles_Small_ci.json  profiles_Small_local.json  project_analysis_snapshot.json  recommendations_large_project.json  recommendations_proc_macro_heavy.json  recommendations_test_heavy.json
tests/phase4_production/: compatibility_tests.rs  performance_optimization_tests.rs  user_acceptance_tests.rs
tests/production_validation/: accessibility_tests.rs  performance_optimization_tests.rs
