[package]
name = "cargo-optimize"
version = "0.1.0"
edition = "2021"
description = "MVP: Automatic linker optimization for Rust builds"
license = "MIT OR Apache-2.0"

[lib]
name = "cargo_optimize"
path = "src/lib.rs"

# Temporarily disable the binary while we work on MVP
# [[bin]]
# name = "cargo-optimize"
# path = "src/bin/cargo-optimize.rs"

[[bin]]
name = "debug_detection"
path = "src/bin/debug_detection.rs"

[dependencies]
# None needed for MVP library!

[dev-dependencies]
# Minimal test dependencies

[[test]]
name = "mvp_test"
harness = false

[profile.dev]
# Fast compilation for development
codegen-units = 256
debug = true
incremental = true
lto = false
opt-level = 0

[profile.release]
# Optimized but still reasonable compile times
codegen-units = 16
lto = "thin"
opt-level = 3
