[package]
name = "cargo-optimize"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Automatically speed up Rust builds by 15-25% with zero configuration"
documentation = "https://docs.rs/cargo-optimize"
homepage = "https://github.com/yourusername/cargo-optimize"
repository = "https://github.com/yourusername/cargo-optimize"
readme = "README.md"
keywords = ["cargo", "build", "optimization", "performance", "linker"]
categories = ["development-tools::cargo-plugins", "development-tools::build-utils"]
license = "MIT OR Apache-2.0"
exclude = ["issue/", "*.bak", "*.backup"]

[lib]
name = "cargo_optimize"
path = "src/lib.rs"

# Temporarily disable the binary while we work on MVP
# [[bin]]
# name = "cargo-optimize"
# path = "src/bin/cargo-optimize.rs"

# Debug detection binary is for development only, not for release
# [[bin]]
# name = "debug_detection"
# path = "src/bin/debug_detection.rs"

[dependencies]
# None needed for MVP library!

[dev-dependencies]
# Test dependencies for comprehensive testing
tempfile = "3.0"
toml = "0.8"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[[test]]
name = "mvp_test"
harness = false

[[test]]
name = "comprehensive_test_runner"
harness = false

[[test]]
name = "phase2_test_runner"
harness = false

[profile.dev]
# Fast compilation for development
codegen-units = 256
debug = true
incremental = true
lto = false
opt-level = 0

[profile.release]
# Optimized but still reasonable compile times
codegen-units = 16
lto = "thin"
opt-level = 3
